tests/ui/foreign_read.stderr
Error [E0017]: shared access is written with no word in front — not `read`
  --> tests/ui/foreign_read.lex:1:9
    |
  1 | fn show(read label: String) {
    |         ^^^^
 Why: Lex has exactly one spelling for each thing, so all code reads the same
 Fix: remove `read` and write `name: Type`
