tests/ui/foreign_read.lex
fn show(read label: String) {
    print(label);
}

fn main() {
    show("ok");
}
